--- a/portfolio.html
+++ b/portfolio.html
@@ -337,6 +337,25 @@
             </li>
           </ul>
         </div>
+        <div class="subscription">
+          <p class="subscription-text">Підпишіться на розсилку</p>
+          <label for="" class="subscription-footer"
+            ><input
+              type="email"
+              class="subscription-footer-input"
+              required
+              name="user_email_subscription"
+              placeholder="E-mail"
+          /></label>
+          <button class="subscription-btn" type="submit">
+            <div class="subscription-btn-position">
+              <span>Підписатися</span
+              ><svg class="subscription-btn-icon">
+                <use href="./images/sprite.svg#icon-telegram"></use>
+              </svg>
+            </div>
+          </button>
+        </div>
       </div>
     </footer>
   </body>
