--- a/index.html
+++ b/index.html
@@ -435,6 +435,25 @@
             </li>
           </ul>
         </div>
+        <div class="subscription">
+          <p class="subscription-text">Підпишіться на розсилку</p>
+          <label for="" class="subscription-footer"
+            ><input
+              type="email"
+              class="subscription-footer-input"
+              required
+              name="user_email_subscription"
+              placeholder="E-mail"
+          /></label>
+          <button class="subscription-btn" type="submit">
+            <div class="subscription-btn-position">
+              <span>Підписатися</span
+              ><svg class="subscription-btn-icon">
+                <use href="./images/sprite.svg#icon-telegram"></use>
+              </svg>
+            </div>
+          </button>
+        </div>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
@@ -444,6 +463,75 @@
             <use href="./images/sprite.svg#icon-close"></use>
           </svg>
         </button>
+        <p class="modal-form-title">Залиште свої дані, ми вам передзвонимо</p>
+        <form class="modal-form">
+          <label class="modal-form-field">
+            <span class="modal-form-field-desc">Ім'я</span>
+            <span class="modal-form-input-wrapper">
+              <input
+                type="text"
+                class="modal-form-input"
+                required
+                pattern="[a-zA-Zа-яА-ЯІіЇї]+"
+                name="user_name"
+              />
+              <svg class="modal-form-person">
+                <use href="./images/sprite.svg#icon-person"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-form-field">
+            <span class="modal-form-field-desc">Телефон</span>
+            <span class="modal-form-input-wrapper">
+              <input
+                type="tel"
+                class="modal-form-input"
+                required
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                title="xxx-xxx-xx-xx"
+                name="user_phone"
+              />
+              <svg class="modal-form-person">
+                <use href="./images/sprite.svg#icon-phone"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-form-field">
+            <span class="modal-form-field-desc">Пошта</span>
+            <span class="modal-form-input-wrapper">
+              <input type="email" class="modal-form-input" name="user_email" />
+              <svg class="modal-form-person">
+                <use href="./images/sprite.svg#icon-email"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-form-field">
+            <span class="modal-form-field-desc">Коментар</span>
+            <textarea
+              name="user_massage"
+              placeholder="Введіть текст"
+              class="modal-form-message"
+            ></textarea>
+          </label>
+          <label class="modal-form-check-field">
+            <input
+              type="checkbox"
+              class="modal-form-check"
+              name="user_policy"
+              required
+            />
+            <svg class="modal-form-own-checkbox">
+              <use
+                class="modal-form-own-checkbox-icon"
+                href="./images/sprite.svg#icon-Vector"
+              ></use>
+            </svg>
+            Погоджуюся з розсилкою та приймаю&nbsp;<a href="#"
+              >Умови договору</a
+            >
+          </label>
+          <button type="submit" class="modal-form-submit">Відправити</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
