--- a/portfolio.html
+++ b/portfolio.html
@@ -337,9 +337,9 @@
             </li>
           </ul>
         </div>
-        <div class="subscription">
+        <form class="subscription-form">
           <p class="subscription-text">Підпишіться на розсилку</p>
-          <label for="" class="subscription-footer"
+          <label class="subscription-footer"
             ><input
               type="email"
               class="subscription-footer-input"
@@ -348,14 +348,14 @@
               placeholder="E-mail"
           /></label>
           <button class="subscription-btn" type="submit">
-            <div class="subscription-btn-position">
+            <span class="subscription-btn-position">
               <span>Підписатися</span
               ><svg class="subscription-btn-icon">
                 <use href="./images/sprite.svg#icon-telegram"></use>
               </svg>
-            </div>
+            </span>
           </button>
-        </div>
+        </form>
       </div>
     </footer>
   </body>
